--- a/Practice/Practice-2.html
+++ b/Practice/Practice-2.html
@@ -10,12 +10,12 @@
     <form>
       <label>User Name</label><br />
       <p>
-        <input type="text" /> <br />We'll never share your user name with anyone
-        else.
+        <input type="text" placeholder="Enter Your Name" /> <br />We'll never
+        share your user name with anyone else.
       </p>
       <br />
       <label>Book Name</label><br />
-      <input type="text" /><br /><br />
+      <input type="text" placeholder="Enter Book Name" /><br /><br />
       <label>Book Type</label><br /><br />
       <input type="radio" value="Book Type" id="Fiction" />
       <label>Fiction</label><br /><br />
