just add comment in html

--- a/Practice/Practice-3.html
+++ b/Practice/Practice-3.html
@@ -5,6 +5,7 @@
     <title>Hetuk</title>
   </head>
   <body>
+    <!-- hello -->
     <h1>Some of my favourite links</h1>
     <ul>
       <li>Social Networking</li>
