--- a/Form/nettechIndia.html
+++ b/Form/nettechIndia.html
@@ -61,7 +61,7 @@
     <br />
     <form>
         <fieldset>
-            <legend><u>Admission Form</u></legend><br>
+            <legend>Admission Form</legend><br>
             <label>Name</label>
             <input type="text" placeholder="Enter Your Name" required /><br /><br />
             <label>Email Id</label>
