--- a/Form/nettechIndia.html
+++ b/Form/nettechIndia.html
@@ -17,7 +17,10 @@
         <h1>Best Computer Programming Classes In Mumbai</h1>
     </header>
     <br />
-    <img src="./images.png" alt="Nettech" /><br /><br>
+    <figure> 
+    <img src="./images.png" alt="Nettech" />
+    <figcaption>Nettech India Institute</figcaption>
+    </figure><br>
     <section class="About-Us"><b>
         <h1><u>About Us</u>:-</h1>
         <p class="p">
