--- a/Form/nettechIndia.html
+++ b/Form/nettechIndia.html
@@ -18,7 +18,7 @@
     </header>
     <br />
     <figure> 
-    <img src="./images.png" alt="Nettech" />
+    <img src="./images.png" alt="Nettech" /><br>
     <figcaption>Nettech India Institute</figcaption>
     </figure><br>
     <section class="About-Us"><b>
