--- a/Form/nettechIndia.html
+++ b/Form/nettechIndia.html
@@ -11,7 +11,7 @@
 <body>
     <h1 style="text-align: center;"><u>Nettech India Classes</u></h1>
     <marquee>This Website Is For Hacking Your Computer</marquee>
-    <nav class="nav">Home About-Us Admission-Form Contact</nav>
+    <nav class="nav"><span class="space">Home</span> <span class="space1">About-Us</span> <span class="space2">Admission-Form</span> <span class="space3">Contact</span></nav>
     <br /><br />
     <header class="home" id="home">
         <h1>Best Computer Programming Classes In Mumbai</h1>
