--- a/Form/nettechIndia.html
+++ b/Form/nettechIndia.html
@@ -9,91 +9,92 @@
 <link rel="stylesheet" href="style.css" />
 
 <body>
-    <h1 style="text-align: center;"><u>Nettech India Classes</u></h1>
+    <h1><u>Nettech India Classes</u></h1>
     <marquee>This Website Is For Hacking Your Computer</marquee>
-    <nav class="nav"><span class="space">Home</span> <span class="space1">About-Us</span> <span class="space2">Admission-Form</span> <span class="space3">Contact</span></nav>
-    <br /><br />
-    <header class="home" id="home">
-        <h1>Best Computer Programming Classes In Mumbai</h1>
-    </header>
+    <nav class="nav"><a href="#home" class="space">Home</a> <a href="#about">About-Us</a> <a href="#admission" class="space2">Admission-Form</a> <a href="#contact" class="space3">Contact-Us</a></nav>
     <br />
-    <figure> 
-    <img src="./images.png" alt="Nettech" /><br>
-    <figcaption>Nettech India Institute</figcaption>
-    </figure><br>
-    <section class="About-Us"><b>
+    <hr />
+    <header class="home" id="home">
+        <h1 style="text-align: center;">Best Computer Programming Classes In Mumbai</h1>
+        <figure>
+            <img src="./images.png" alt="Nettech" />
+            <figcaption>Nettech India Institute</figcaption>
+        </figure>
+        <hr>
+        <section id="about"><b>
         <h1><u>About Us</u>:-</h1>
         <p class="p">
             Nettech India is located in Thane, Mumbai And Navi-Mumbai<br />offers a top quality learning experice within the areas of I.T. training.<br />Our focus is on providing advanced training<br />and certification in complex network technologies.
         </p></b>
-    </section><br>
-    <ol style="font-weight: bolder">
-        <h3><u>Courses Provided By Us</u>:-<br /></h3>
-        <li>Java Full Stack Course</li>
-        <li>Python Full Stack Course</li>
-        <li>Data Structure And Analysis</li>
-    </ol>
-    <br />
-    <table border="1" cellspacing="5">
-        <h3 style="text-align: center"><u>Fees For All Courses</u></h3>
-        <br />
-        <thead>
-            <tr>
-                <th>Course Name</th>
-                <th>Course Fees</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Java Full Stack Course</td>
-                <td>₹45000</td>
-            </tr>
+        </section>
+        <hr>
+        <ol style="font-weight: bolder; align-items: center; text-align: center; list-style-position: inside;">
+            <h3><u>Courses Provided By Us</u>:-<br /></h3>
+            <li>Java Full Stack Course</li>
+            <li>Python Full Stack Course</li>
+            <li>Data Structure And Analysis</li>
+        </ol>
+        <hr />
+        <table border="1" cellspacing="5">
+            <h3 style="text-align: center"><u>Fees For All Courses</u></h3>
+            <br />
+            <thead>
+                <tr>
+                    <th>Course Name</th>
+                    <th>Course Fees</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Java Full Stack Course</td>
+                    <td>₹45000</td>
+                </tr>
 
-            <tr>
-                <td>Python Full Stack Course</td>
-                <td>₹55000</td>
-            </tr>
+                <tr>
+                    <td>Python Full Stack Course</td>
+                    <td>₹55000</td>
+                </tr>
 
-            <tr>
-                <td>Data Structure And Analysis</td>
-                <td>₹65000</td>
-            </tr>
-        </tbody>
-    </table>
-    <br /><br /><br /><br /><br /><br />
-    <br />
-    <form>
-        <fieldset>
-            <legend>Admission Form</legend><br>
-            <label>Name</label>
-            <input type="text" placeholder="Enter Your Name" required /><br /><br />
-            <label>Email Id</label>
-            <input type="email" placeholder="Enter Your Email-Id" required /><br /><br />
-            <label>Mobile Number</label>
-            <input type="tel" placeholder="Enter Your Mobile Number" required maxlength="10" /><br /><br />
-            <label>Gender</label><br />
-            <label>Male</label>
-            <input type="radio" value="male" /><br />
-            <label>Female</label>
-            <input type="radio" value="female" /><br /><br />
-            <label>Course</label>
-            <select>
+                <tr>
+                    <td>Data Structure And Analysis</td>
+                    <td>₹65000</td>
+                </tr>
+            </tbody>
+        </table>
+        <br /><br /><br /><br /><br /><br />
+        <hr />
+        <form id="admission">
+            <fieldset>
+                <legend>Admission Form</legend><br>
+                <label>Name</label>
+                <input type="text" placeholder="Enter Your Name" required /><br /><br />
+                <label>Email Id</label>
+                <input type="email" placeholder="Enter Your Email-Id" required /><br /><br />
+                <label>Mobile Number</label>
+                <input type="tel" placeholder="Enter Your Mobile Number" required maxlength="10" /><br /><br />
+                <label>Gender</label><br />
+                <label>Male</label>
+                <input type="radio" value="male" /><br />
+                <label>Female</label>
+                <input type="radio" value="female" /><br /><br />
+                <label>Course</label>
+                <select>
               <option>Select Course</option>
         <option>Java Full Stack Course</option>
         <option>Python Full Stack Course</option>
         <option>Data Structure And Analysis</option>
       </select>
-            <br />
-            <br />
-            <input type="button" value="Submit" />
-    </form>
-    </fieldset><br><br>
-    <footer>
-        <h5><u>Contact Us</u>:-<br> <u>Tel No</u>:- +160 1234567890 <br> <u>Email-Id</u>:- nettechindia@gmail.com
-            <p style="text-align: left; font-weight: bolder; color: black;">India, Andheri(West)</p>
-        </h5>
-        <p style="text-align: center; font-weight: bolder; color: black;"><u>Copyrights © itcode. all rights reserved</u></p>
-    </footer>
+                <br />
+                <br />
+                <input type="button" value="Submit" />
+        </form>
+        </fieldset><br><br>
+        <footer>
+            <h5 id="contact"><u>Contact Us</u>:-<br> <u>Tel No</u>:- +160 1234567890 <br> <u>Email-Id</u>:- nettechindia@gmail.com
+                <p style="text-align: left; font-weight: bolder; color: black;">India, Andheri(West)</p>
+            </h5>
+            <p style="text-align: center; font-weight: bolder; color: black;"><u>Copyrights © itcode. all rights reserved</u></p>
+        </footer>
 </body>
 
 </html>
