--- a/Hetuk/Animation.html
+++ b/Hetuk/Animation.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
-
 <head>
-=======
   <head>
->>>>>>> ed3cde1480e054bf010c8423ce920bb51f14e8a4
-    <meta charset="UTF-8" />
+<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hetuk</title>
     <link rel="stylesheet" href="../Hetuk/CSS/Animation.css" />
-<<<<<<< HEAD
 </head>
-
 <body>
     <h1>Hello</h1>
     <br />
@@ -22,16 +16,8 @@
     <br>
     <hr>
     <br>
-    <img src="./logo.svg" alt="logo">
+    <div class="logo">
+     <img src="./logo.svg" alt="logo" />
+    </div>
 </body>
-
 </html>
-=======
-  </head>
-  <body>
-    <h1>Hello</h1>
-    <br />
-    <p>Animation Using CSS</p>
-  </body>
-</html>
->>>>>>> ed3cde1480e054bf010c8423ce920bb51f14e8a4
