--- a/Hetuk/Gradient_Radial_Color.html
+++ b/Hetuk/Gradient_Radial_Color.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hetuk</title>
     <link rel="stylesheet" href="../Hetuk/CSS/Gradient_Radial_Color.css">
 </head>
+
 <body>
     <div class="logo">
-    <img src="./logo.svg" alt="React Logo">
+        <img src="./Avengers_Logo.svg" alt="Avengers Logo">
     </div>
 </body>
+
 </html>
