--- a/Practice/React.html
+++ b/Practice/React.html
@@ -14,7 +14,7 @@
     <nav>Home About Topic Contact</nav>
     <br><br>
     <marquee class="marq">This Website Is To Give Only React Information</marquee>
-    <h1>React</h1>
+    <h1>REACT</h1>
     <br>
     <img src="../Hetuk/logo.svg" alt="React Logo">
     <div class="hello">
