--- a/Practice/React.html
+++ b/Practice/React.html
@@ -11,12 +11,19 @@
 <body>
     <br>
     <br>
-    <nav>Home About Topic Contact</nav>
-    <br><br>
+    <div class="parent">
+        <div class="child1">
+            <img src="../Hetuk/nav_logo1.svg">
+            <span>Hetuk Coding Language Information</span>
+        </div>
+        <div class="child2">
+            <nav><span class="space">Home</span> <span class="space1">About</span> <span class="space2">Topic</span> <span class="space3">Contact</span></nav>
+        </div>
+    </div><br><br>
     <marquee class="marq">This Website Is To Give Only React Information</marquee>
     <h1>REACT</h1>
     <br>
-    <img src="../Hetuk/logo.svg" alt="React Logo">
+    <img class="img" src="../Hetuk/logo.svg" alt="React Logo">
     <div class="hello">
         <br>
         <div class="left">
