--- a/Practice/React.html
+++ b/Practice/React.html
@@ -71,6 +71,22 @@
             </ul>
             <br>
         </div>
+    </div><br><br><br><br><br>
+    <div class="parent1">
+        <div class="footer">
+            <footer>
+                <h5><u>Contact Us</u>:-<br>
+                    <u>Tel No</u>:-+160-1234567890<br> <u>Email-Id</u>:- hetuk@gmail.com
+            </footer>
+        </div>
+        <div class="footer1">
+            <footer>
+                <p>India, Andheri(West)</p>
+            </footer>
+        </div>
+        <div class="footer2">
+            <p><u>Copyrights © itcode. all rights reserved</u></p>
+        </div>
     </div>
 </body>
 
