--- a/Hetuk/Flex.html
+++ b/Hetuk/Flex.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../Hetuk/CSS/Flex.css" />
   </head>
   <body>
+    <h1>Display Flex And Outline Using CSS</h1>
+    <br /><br />
     <div class="parent">
       <div class="child">1</div>
       <div class="child">2</div>
