--- a/Practice/React.html
+++ b/Practice/React.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hetuk</title>
-    <link rel="stylesheet" href="./React.css">
+    <link rel="stylesheet" href="../Practice/CSS/React.css">
 </head>
 
 <body>
