--- a/Practice/Grid2.html
+++ b/Practice/Grid2.html
@@ -1,39 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hetuk</title>
     <link rel="stylesheet" href="../Practice/CSS/Grid2.css" />
-  </head>
-  <body>
-    <div class="parent">
-      <nav>
-        <div class="child1">
-          <img
-            src="https://cdn.masaischool.com/masai-website/Masai_Logo_dark_web_b21aab8c62.webp"
-            alt="Masai Logo"
-          />
-        </div>
-        <div class="child2">
-          <select>
-            <option>Courses</option>
-            <option>Software Develpoment</option>
-            <option>Data Science</option>
-            <option>Digital Marketing</option>
-            <option>Business Analytics</option>
-          </select>
-        </div>
-        <div class="child3">
-            <div>NEW</div>
-            <div>INTERVIEW GUIDES</div>
-        </div>
-        <div class="child4">
-            SUCCESS STORIES
-        </div>
-            HIRE FROM US
+</head>
 
-      </nav>
+<body>
+    <div class="parent">
+        <nav>
+            <div class="child1">
+                <img src="https://cdn.masaischool.com/masai-website/Masai_Logo_dark_web_b21aab8c62.webp" alt="Masai Logo" />
+                <select>
+                  <option>Courses</option>
+                  <option>Software Develpoment</option>
+                  <option>Data Science</option>
+                  <option>Digital Marketing</option>
+                  <option>Business Analytics</option>
+                </select>
+            </div>
+            <div class="child2">
+                <div>NEW INTERVIEW</div>
+                GUIDE SUCCESS STORIES HIRE FROM US FEES
+                <button>REGISTER</button>
+            </div>
+        </nav>
     </div>
-  </body>
+</body>
+
 </html>
