--- a/Practice/Grid2.html
+++ b/Practice/Grid2.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hetuk</title>
     <link rel="stylesheet" href="../Practice/CSS/Grid2.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <nav class="parent">
-      <div class="child1">
-        <img
-          src="https://cdn.masaischool.com/masai-website/Masai_Logo_dark_web_b21aab8c62.webp"
-          alt="Masai Logo"
-        />
-        <select>
-          <option>Courses</option>
+        <div class="child1">
+            <img src="https://cdn.masaischool.com/masai-website/Masai_Logo_dark_web_b21aab8c62.webp" alt="Masai Logo" />
+            <select>
+          <option>COURSES</option>
           <option>Software Develpoment</option>
           <option>Data Science</option>
           <option>Digital Marketing</option>
           <option>Business Analytics</option>
         </select>
-      </div>
-      <div class="child2">
-        <span>NEW</span>
-        <div>
-          <div><li>INTERVIEW GUIDES</li></div>
-          <li>SUCCESS STORIES</li>
-          <li>HIRE FROM US</li>
-          <li>FEES</li>
         </div>
-        <button>REGISTER</button>
-      </div>
+        <div class="child2">
+            <div>
+                <div class="span-grid">
+                    <span>NEW</span>
+                    <li>INTERVIEW GUIDES</li>
+                </div>
+                <li>SUCCESS STORIES</li>
+                <li>HIRE FROM US</li>
+                <li>FEES</li>
+            </div>
+            <button>REGISTER</button>
+        </div>
     </nav>
-  </body>
+</body>
+
 </html>
