--- a/Practice/Grid2.html
+++ b/Practice/Grid2.html
@@ -11,7 +11,9 @@
 <body>
     <nav class="parent">
         <div class="child1">
-            <img src="https://cdn.masaischool.com/masai-website/Masai_Logo_dark_web_b21aab8c62.webp" alt="Masai Logo" />
+            <a href="../Practice/Masai.html" target="_blank">
+                <img src="https://cdn.masaischool.com/masai-website/Masai_Logo_dark_web_b21aab8c62.webp" alt="Masai Logo" />
+            </a>
             <select>
           <option>COURSES</option>
           <option>Software Develpoment</option>
