--- a/Practice/Masai.html
+++ b/Practice/Masai.html
@@ -23,7 +23,8 @@
         <div class="child2"><br><br>
             <div class="images">
                 <img src="https://www.masaischool.com/images/new-homepage/community/community4.webp" alt="image3" class="image3"><img src="https://www.masaischool.com/images/new-homepage/community/community2.webp" alt="iamge4" class="image4">
-                <img src="https://www.masaischool.com/images/new-homepage/community/community3.webp" alt="image5" class="image5"><img src="https://www.masaischool.com/images/new-homepage/community/community11.webp" alt="image6" class="image6">
+                <img src="https://www.masaischool.com/images/new-homepage/community/community3.webp" alt="image5" class="image5">
+                <img src="https://www.masaischool.com/images/new-homepage/community/community11.webp" alt="image6" class="image6">
             </div>
         </div>
     </div>
