--- a/Practice/Grid2.html
+++ b/Practice/Grid2.html
@@ -12,7 +12,7 @@
     <nav class="parent">
         <div class="child1">
             <a href="../Practice/Masai.html" target="_blank">
-                <img src="https://cdn.masaischool.com/masai-website/Masai_Logo_dark_web_b21aab8c62.webp" alt="Masai Logo" />
+                <img src="https://cdn.masaischool.com/masai-website/Masai_Logo_dark_web_b21aab8c62.webp" alt="Masai Logo" class="image7" />
             </a>
             <select>
           <option>COURSES</option>
