--- a/Practice/Masai.html
+++ b/Practice/Masai.html
@@ -15,17 +15,17 @@
                 <h1>Rise Above Your Challenges<br> <span>Join The Tribe</span></h1><br>
                 <button>Join Community ⇨</button>
                 <div class="images">
-                    <img src="https://www.masaischool.com/images/new-homepage/community/community5.webp" alt="image1" class="image1">
-                    <img src="https://www.masaischool.com/images/new-homepage/community/community1.webp" alt="image2" class="image2">
+                    <img src="../Practice/Images/Image1.webp" alt="image1" class="image1">
+                    <img src="../Practice/Images/Image2.webp" alt="image2" class="image2">
                 </div>
             </div>
         </div>
         <div class="child2"><br>
             <div class="images">
-                <img src="https://www.masaischool.com/images/new-homepage/community/community4.webp" alt="image3" class="image3">
-                <img src="https://www.masaischool.com/images/new-homepage/community/community2.webp" alt="image4" class="image4">
-                <img src="https://www.masaischool.com/images/new-homepage/community/community11.webp" alt="image5" class="image5">
-                <img src="https://www.masaischool.com/images/new-homepage/community/community8.webp" alt="image6" class="image6">
+                <img src="../Practice/Images/Image3.webp" alt="image3" class="image3">
+                <img src="../Practice/Images/Image4.webp" alt="image4" class="image4">
+                <img src="../Practice/Images/Image5.webp" alt="image5" class="image5">
+                <img src="../Practice/Images/Image6.webp" alt="image6" class="image6">
             </div>
         </div>
     </div>
