--- a/Practice/Masai2.html
+++ b/Practice/Masai2.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hetuk</title>
-    <link rel="stylesheet" href="../Practice/Masai2.css" />
+    <link rel="stylesheet" href="../Practice/CSS/Masai2.css" />
 </head>
 
 <body>
     <nav class="parent">
         <div class="child1">
-            <img src="https://cdn.masaischool.com/masai-website/Masai_Logo_dark_web_b21aab8c62.webp" alt="Masai Logo" class="image7" />
+            <img src="../Practice/Images/Image7.webp" alt="Masai Logo" class="image7" />
             <select>
           <option>COURSES</option>
           <option>Software Develpoment</option>
