--- a/Practice/Masai2.html
+++ b/Practice/Masai2.html
@@ -1,58 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hetuk</title>
     <link rel="stylesheet" href="../Practice/CSS/Masai2.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <nav class="parent">
-        <div class="child1">
-            <img src="../Practice/Images/Image7.webp" alt="Masai Logo" class="image7" />
-            <select>
+      <div class="child1">
+        <img
+          src="../Practice/Images/Image7.webp"
+          alt="Masai Logo"
+          class="image7"
+        />
+        <select>
           <option>COURSES</option>
           <option>Software Develpoment</option>
           <option>Data Science</option>
           <option>Digital Marketing</option>
           <option>Business Analytics</option>
         </select>
+      </div>
+      <div class="child2">
+        <div class="A">
+          <div class="span-grid">
+            <span class="A1">NEW</span>
+            <li>INTERVIEW GUIDES</li>
+          </div>
+          <li>SUCCESS STORIES</li>
+          <li>HIRE FROM US</li>
+          <li>FEES</li>
+          <button class="C1">REGISTER</button>
         </div>
-        <div class="child2">
-            <div class="A">
-                <div class="span-grid">
-                    <span class="A1">NEW</span>
-                    <li>INTERVIEW GUIDES</li>
-                </div>
-                <li>SUCCESS STORIES</li>
-                <li>HIRE FROM US</li>
-                <li>FEES</li>
-                <button class="C1">REGISTER</button>
-            </div>
-        </div>
+      </div>
     </nav>
-    <div class="parent1"><br><br>
-        <div class="child3">
-            <div class="B">
-                <h1>Rise Above Your Challenges<br> <span class="B1">Join The Tribe</span></h1><br>
-                <button class="C2">Join Community ⇨</button>
-                <div class="images">
-                    <img src="../Practice/Images/Image1.webp" alt="image1" class="image1">
-                    <img src="../Practice/Images/Image2.webp" alt="image2" class="image2">
-                </div>
-            </div>
+    <div class="parent1">
+      <br /><br />
+      <div class="child3">
+        <div class="B">
+          <h1>
+            Rise Above Your Challenges<br />
+            <span class="B1">Join The Tribe</span>
+          </h1>
+          <br />
+          <button class="C2">Join Community ⇨</button>
+          <div class="images">
+            <img
+              src="../Practice/Images/Image1.webp"
+              alt="image1"
+              class="image1"
+            />
+            <img
+              src="../Practice/Images/Image2.webp"
+              alt="image2"
+              class="image2"
+            />
+          </div>
         </div>
-        <div class="child4"><br><br>
-            <div class="images">
-                <img src="../Practice/Images/Image3.webp" alt="image3" class="image3">
-                <img src="../Practice/Images/Image4.webp" alt="image4" class="image4">
-                <img src="../Practice/Images/Image5.webp" alt="image5" class="image5">
-                <img src="../Practice/Images/Image6.webp" alt="image6" class="image6">
-            </div>
+      </div>
+      <div class="child4">
+        <br /><br />
+        <div class="images">
+          <img
+            src="../Practice/Images/Image3.webp"
+            alt="image3"
+            class="image3"
+          />
+          <img
+            src="../Practice/Images/Image4.webp"
+            alt="image4"
+            class="image4"
+          />
+          <img
+            src="../Practice/Images/Image5.webp"
+            alt="image5"
+            class="image5"
+          />
+          <img
+            src="../Practice/Images/Image6.webp"
+            alt="image6"
+            class="image6"
+          />
         </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
