--- a/Hetuk/Flex.html
+++ b/Hetuk/Flex.html
@@ -10,13 +10,27 @@
     <h1>Display Flex And Outline Using CSS</h1>
     <br /><br />
     <div class="parent">
-      <div class="child">1</div>
-      <div class="child">2</div>
-      <div class="child">3</div>
-      <div class="child">4</div>
-      <div class="child">5</div>
-      <div class="child">6</div>
-      <div class="child">7</div>
+      <div class="parent1">
+        <div class="child">1</div>
+        <div class="child">2</div>
+        <div class="child">3</div>
+        <div class="child">4</div>
+        <div class="child">5</div>
+      </div>
+      <div class="parent2">
+        <div class="child1">1</div>
+        <div class="child1">2</div>
+        <div class="child1">3</div>
+        <div class="child1">4</div>
+        <div class="child1">5</div>
+      </div>
+      <div class="parent3">
+        <div class="child2">1</div>
+        <div class="child2">2</div>
+        <div class="child2">3</div>
+        <div class="child2">4</div>
+        <div class="child2">5</div>
+      </div>
     </div>
   </body>
 </html>
