--- a/Hetuk/Grid.html
+++ b/Hetuk/Grid.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <div class="parent">
-      <div class="child"></div>
-      <div class="child"></div>
-      <div class="child"></div>
-      <div class="child"></div>
-      <div class="child"></div>
-      <div class="child"></div>
-      <div class="child"></div>
+      <div class="child"><img src="./ghost-rider-in-suit.jpg" alt="Ghost Rider"></div>
+      <div class="child">2</div>
+      <div class="child">3</div>
+      <div class="child">4</div>
+      <div class="child">5</div>
+      <div class="child">6</div>
+      <div class="child">7</div>
     </div>
   </body>
 </html>
