--- a/Practice/Masai2.html
+++ b/Practice/Masai2.html
@@ -29,9 +29,11 @@
             <span class="A1">NEW</span>
             <li>INTERVIEW GUIDES</li>
           </div>
-          <li>SUCCESS STORIES</li>
-          <li>HIRE FROM US</li>
-          <li>FEES</li>
+          <div class="Z1">
+            <li>SUCCESS STORIES</li>
+            <li>HIRE FROM US</li>
+            <li>FEES</li>
+          </div>
           <button class="C1">REGISTER</button>
         </div>
       </div>
@@ -63,6 +65,7 @@
       <div class="child4">
         <br /><br />
         <div class="images">
+          <!-- <div> -->
           <img
             src="../Practice/Images/Image3.webp"
             alt="image3"
@@ -73,16 +76,19 @@
             alt="image4"
             class="image4"
           />
-          <img
-            src="../Practice/Images/Image5.webp"
-            alt="image5"
-            class="image5"
-          />
-          <img
-            src="../Practice/Images/Image6.webp"
-            alt="image6"
-            class="image6"
-          />
+          <!-- </div> -->
+          <div class="Z">
+            <img
+              src="../Practice/Images/Image5.webp"
+              alt="image5"
+              class="image5"
+            />
+            <img
+              src="../Practice/Images/Image6.webp"
+              alt="image6"
+              class="image6"
+            />
+          </div>
         </div>
       </div>
     </div>
