--- a/Practice/Masai.html
+++ b/Practice/Masai.html
@@ -20,15 +20,19 @@
                 </div>
             </div>
         </div>
-        <div class="child2"><br>
-            <div class="images">
-                <img src="../Practice/Images/Image3.webp" alt="image3" class="image3">
-                <img src="../Practice/Images/Image4.webp" alt="image4" class="image4">
-                <img src="../Practice/Images/Image5.webp" alt="image5" class="image5">
-                <img src="../Practice/Images/Image6.webp" alt="image6" class="image6">
+        <div class="child2"><br><br>
+            <div>
+                <div class="images">
+                    <img src="../Practice/Images/Image3.webp" alt="image3" class="image3">
+                    <img src="../Practice/Images/Image4.webp" alt="image4" class="image4">
+                </div>
+                <div>
+                    <div class="images">
+                        <img src="../Practice/Images/Image5.webp" alt="image5" class="image5">
+                        <img src="../Practice/Images/Image6.webp" alt="image6" class="image6">
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
 </body>
 
 </html>
