--- a/Hetuk/Navbar.html
+++ b/Hetuk/Navbar.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hetuk</title>
     <link rel="stylesheet" href="../Hetuk/CSS/Navbar.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <nav>
-        <div class="logo">
-            <img src="../Hetuk/nav_logo2.svg" alt="logo" />
-            <h1 class="text">
-                Hetuk <br /> VPN
-            </h1>
-        </div>
-        <div class="list">
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Contact</li>
-                <li>Login</li>
-            </ul>
-        </div>
-        <div class="dropdown">
-            <select value="Srevers">
+      <div class="logo">
+        <img src="../Hetuk/nav_logo2.svg" alt="logo" />
+        <h1 class="text">
+          Hetuk <br />
+          VPN
+        </h1>
+      </div>
+      <div class="list">
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Contact</li>
+          <li>Login</li>
+        </ul>
+      </div>
+      <div class="dropdown">
+        <select value="Srevers">
           <option value="Servers">Servers</option>
           <option value="India">India</option>
           <option value="Pakistan">Pakistan</option>
           <option value="Australia">Australia</option>
           <option value="New Zealand">New Zealand</option>
           <option value="South Africa">South Africa</option>
+          <!-- <div class="tooltip">
+            <span class="tooltiptext">There Are 5 Servers</span>
+          </div> -->
         </select>
-        </div>
-        <div class="sign-in">
-            <img src="../Hetuk/user-interface.svg" alt="Sign-In Logo" />
-        </div>
+      </div>
+      <div class="sign-in">
+        <img src="../Hetuk/user-interface.svg" alt="Sign-In Logo" />
+      </div>
     </nav>
-</body>
-
+  </body>
 </html>
