--- a/Projects/Profile.html
+++ b/Projects/Profile.html
@@ -23,7 +23,7 @@
         <div class="profile">
             <div class="A">
                 <div class="profile_img">
-                    <img src="./Profile.jpg" alt="My Photo">
+                    <img src="./Images/Profile.jpg" alt="My Photo">
                 </div>
                 <div class="side_text">
                     Hetuk Patel 😎
