--- a/Projects/Profile.html
+++ b/Projects/Profile.html
@@ -1,76 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hetuk</title>
     <link rel="stylesheet" href="../Projects/CSS/Profile.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="parent">
+      <div class="profile">
         <nav>
-            <div class="child1">
-                <p class="P">hetukp12@gmail.com</p>
-                <button class="B">Copy</button>
-                <button class="B">CV</button>
-            </div>
-            <div class="child2">
-                <p class="P">LinkedIn / Twitter / Instagram</p>
-            </div>
+          <div class="child1">
+            <p class="P"><u>hetukp12@gmail.com</u></p>
+            <button class="B">Copy</button>
+            <button class="B">CV</button>
+          </div>
+          <div class="child2">
+            <div class="underline">LinkedIn</div> / <div class="underline">Twitter</div> / <div class="underline">Instagram</div>
+          </div>
         </nav>
-        <div class="profile">
-            <div class="A">
-                <div class="profile_img">
-                    <img src="./Images/Profile.jpg" alt="My Photo" />
-                </div>
-                <div class="side_text">Hetuk Patel 😎</div>
-            </div>
-            <div class="text">
-                <p class="P1">
-                    Building Digital <br /> Products, Brands, And <br /> Experience. <br />
-                    <button class="B1">Learn More >></button>
-                </p>
-            </div>
+        <div class="A">
+          <div class="profile_img">
+            <img src="./Images/Profile.jpg" alt="My Photo" />
+          </div>
+          <div class="side_text">Hetuk Patel 😎</div>
         </div>
+        <div class="text">
+          <p class="P1">
+            <u>
+              Building Digital <br />
+              Products, Brands, And <br />
+              Experience. </u
+            ><br />
+            <button class="B1">Learn More >></button>
+          </p>
+        </div>
+      </div>
+      <div class="C">
         <div class="parent1">
-            <img src="./Images/National Bank Logo.svg" alt="National Bank Logo" class="img1" />
-            <img src="./Images/Mattered Logo.svg" alt="Mattered Logo" class="img2" />
-            <img src="./Images/Coco Cola Logo.svg" alt="Coco Cola Logo" class="img3" />
-            <img src="./Images/Adobe Logo.svg" alt="Adobe Logo" class="img4" />
-            <img src="./Images/Subway Logo.svg" alt="Subway Logo" class="img5" />
-            <img src="./Images/Code Academy Logo.svg" alt="Code Academy Logo" class="img6" />
+          <img
+            src="./Images/National Bank Logo.svg"
+            alt="National Bank Logo"
+            class="img1"
+          />
+          <img
+            src="./Images/Mattered Logo.svg"
+            alt="Mattered Logo"
+            class="img2"
+          />
+          <img
+            src="./Images/Coco Cola Logo.svg"
+            alt="Coco Cola Logo"
+            class="img3"
+          />
+          <img src="./Images/Adobe Logo.svg" alt="Adobe Logo" class="img4" />
+          <img src="./Images/Subway Logo.svg" alt="Subway Logo" class="img5" />
+          <img
+            src="./Images/Code Academy Logo.svg"
+            alt="Code Academy Logo"
+            class="img6"
+          />
         </div>
         <div class="parent2">
-            <p>
-                Collaborate With Brands And Agencies <br /> To Create Impactful Results
-            </p>
+          <p>
+            <u>
+              Collaborate With Brands And Agencies <br />
+              To Create Impactful Results</u
+            >
+          </p>
         </div>
         <br /><br /><br />
         <div class="parent3">
-            <hr />
-            <button>Services</button>
+          <hr />
+          <button>Services</button>
         </div>
         <div class="card">
-            <div class="container">
-                <img src="./Images/UI UX Logo.svg" alt="UI UX Logo" />
-                <p>Designing interfaces that are <br>intuitive, efficient, and <br>enjoyable to use</p>
-            </div>
-            <div class="container">
-                <img src="./Images/Web And Mobile App Logo.svg" alt="Web And Mobile App Logo" />
-                <p>Transforming ideas into <br>exceptional web and mobile <br>app experiences.</p>
-            </div>
-            <div class="conatiner">
-                <img src="./Images/Design And Creative Logo.svg" alt="Design And Creative Logo" />
-                <p>Creating visually stunning <br>designs that connect with your <br>audiences.</p>
-            </div>
-            <div class="conatiner">
-                <img src="./Images/Development.svg" alt="Development" />
-                <p>Bringing your vision to life with <br>detailed technology and design <br>research.</p>
-            </div>
+          <div class="container">
+            <img src="./Images/UI UX Logo.svg" alt="UI UX Logo" />
+            <p>
+              <b><u>UX & UI</u></b>
+            </p>
+            <p class="left">
+              Designing interfaces that are <br />intuitive, efficient, and
+              <br />enjoyable to use
+            </p>
+          </div>
+          <div class="container">
+            <img
+              src="./Images/Web And Mobile App Logo.svg"
+              alt="Web And Mobile App Logo"
+            />
+            <p>
+              <b><u>Web & Mobile App</u></b>
+            </p>
+            <p class="left">
+              Transforming ideas into <br />exceptional web and mobile <br />app
+              experiences.
+            </p>
+          </div>
+          <div class="container">
+            <img
+              src="./Images/Design And Creative Logo.svg"
+              alt="Design And Creative Logo"
+              class="img7"
+            />
+            <p>
+              <b><u>Design & Creative</u></b>
+            </p>
+            <p class="left">
+              Creating visually stunning <br />designs that connect with your
+              <br />audiences.
+            </p>
+          </div>
+          <div class="container">
+            <img
+              src="./Images/Development.svg"
+              alt="Development"
+              class="img8"
+            />
+            <p>
+              <b><u>Development</u></b>
+            </p>
+            <p class="left">
+              Bringing your vision to life with <br />detailed technology and
+              design <br />research.
+            </p>
+          </div>
         </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
