--- a/Hetuk/Shadow.html
+++ b/Hetuk/Shadow.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="border">
-      <img src="../Hetuk/ghost-rider-in-suit.jpg" alt="Logo" />
+      <img src="./nav_logo2.svg" alt="Logo" />
     </div>
   </body>
 </html>
