--- a/Projects/Profile.html
+++ b/Projects/Profile.html
@@ -17,7 +17,11 @@
             <button class="B">CV</button>
           </div>
           <div class="child2">
-            <div class="underline">LinkedIn</div> / <div class="underline">Twitter</div> / <div class="underline">Instagram</div>
+            <div class="underline">LinkedIn</div>
+            /
+            <div class="underline">Twitter</div>
+            /
+            <div class="underline">Instagram</div>
           </div>
         </nav>
         <div class="A">
