--- a/Projects/Profile.html
+++ b/Projects/Profile.html
@@ -26,7 +26,7 @@
         </nav>
         <div class="A">
           <div class="profile_img">
-            <img src="./Images/Profile.jpg" alt="My Photo" />
+            <img src="../Hetuk/ghost-rider-in-suit.jpg" alt="My Photo" />
           </div>
           <div class="side_text">Hetuk Patel 😎</div>
         </div>
