--- a/Projects/Aafiya.html
+++ b/Projects/Aafiya.html
@@ -19,31 +19,43 @@
         </div>
         <div class="image_text">
           <div class="book_text">
-            <img src="./Images/Book.svg" alt="Book" />
+            <img src="./Images/Book.svg" alt="Book" class="img3" />
             <div class="grid">
               <br />
               <p class="text">Second Medical Option</p>
-              <br />
               <p class="text1">Book Consultation</p>
             </div>
           </div>
           <div class="call_text">
-            <img src="./Images/Call.svg" alt="Call" /><br />
+            <img src="./Images/Call.svg" alt="Call" class="img4" /><br />
             <div class="grid">
               <br />
               <p class="text">Call Us On</p>
-              <br />
               <p class="text1">985 896 2222</p>
             </div>
           </div>
           <div class="mail_text">
-            <img src="./Images/Mail.png" alt="Mail" />
+            <img src="./Images/Mail.png" alt="Mail" class="img5" />
             <div class="grid">
               <br />
               <p class="text">Email Us On</p>
-              <br />
               <p class="text1">info@mediretreats.com</p>
             </div>
+          </div>
+          <div class="dropdown">
+            <select>
+              <option value="India">
+                <img src="./Images/India.svg" alt="India Flag" />
+              </option>
+              <br />
+              <option value="Australia">
+                <img src="./Images/Austialia.svg" alt="Australia Flag" />
+              </option>
+              <br />
+              <option value="England">
+                <img src="./Images/England.svg" alt="England Flag" />
+              </option>
+            </select>
           </div>
         </div>
       </div>
