--- a/Projects/Aafiya.html
+++ b/Projects/Aafiya.html
@@ -423,12 +423,52 @@
       </p>
     </div>
     <div class="footer">
-      <h5>Stay healthy and strong to enjoy life</h5>
-      <br>
-      <h2>We have team of healthcare experts</h2>
-      <div class="flex">
-        <button>Get In Touch</button>
-        <h1>+91 898 777 9999</h1>
+      <div class="footer1">
+        <h5>Stay healthy and strong to enjoy life</h5>
+        <br />
+        <h2>We have team of healthcare experts</h2>
+        <div class="flex">
+          <button>Get In Touch</button>
+          <h1>+91 898 777 9999</h1>
+        </div>
+      </div>
+      <div class="footer2">
+        <h5>Important Links</h5>
+        <ul>
+          <li>Home</li>
+          <li>About Us</li>
+          <li>FAQs</li>
+          <li>Blog</li>
+          <li>Contact Us</li>
+        </ul>
+        <br />
+        <h5>Top Hospitals</h5>
+        <ul>
+          <li>Fortis Hospital, Mumbai</li>
+          <li>Wockhardt Hospital, Navi Mumbai</li>
+          <li>SevenHills Hospital, Mumbai</li>
+          <li>Jaslok Hospital, Mumbai</li>
+          <li>Apollo Hospital, Bengaluru</li>
+          <li>View All</li>
+        </ul>
+        <br />
+        <h5>Top Treatments</h5>
+        <ul>
+          <li>Cancer treatment</li>
+          <li>Cosmetic surgery</li>
+          <li>Dental treatment</li>
+          <li>Facio maxillary surgery</li>
+          <li>Neurosurgery</li>
+          <li>View All</li>
+        </ul>
+        <div class="child_footer">
+          <img src="./Images/icon.png" alt="Icon" />
+          <div class="flex">
+            <h3>Are you doctor / hospital?</h3>
+            <h2>Join Mediretreats</h3>
+          </div>
+          <p>At Aafiya we work towards making the journey of a patient towards finding the right treatment easy. If you are interested in joining us in this cause, contact us!</p>
+        </div>
       </div>
     </div>
   </body>
