Day 16 Masai Website

--- a/Masai Website Practice/HTML/Fees.html
+++ b/Masai Website Practice/HTML/Fees.html
@@ -39,7 +39,7 @@
             <h1>Pay After Placement<br>(PAP) Agreement</h1>
         </div>
         <div class="pap_child2">
-            <p>PAP Agreement is a legal contract that makes education at Masai <b>outcome-based.</b> It is not an<br> education loan, as you do not have to pay any interest & you do not require any collaterals. If you do<br> not get placed within 1 year
+            <p>PAP Agreement is a legal contract that makes education at Masai <b>outcome-based.</b> It is not an<br> education loan, as you do not have to pay any interest &amp; you do not require any collaterals. If you do<br> not get placed within 1 year
                 of course completion, your learning with Masai is completely free.</p>
         </div>
     </div>
@@ -111,10 +111,10 @@
                 <tr class="column1">
                     <td></td>
                     <td>
-                        < 3.5 LPA</td>
-                            <td>0</td>
-                            <td>NA</td>
-                            <td>0</td>
+                        &lt; 3.5 LPA</td>
+                    <td>0</td>
+                    <td>NA</td>
+                    <td>0</td>
                 </tr>
                 <tr class="column2">
                     <td><b>A</b></td>
@@ -260,13 +260,13 @@
                 <div class="footer_text2">
                     <p class="footer_p">IIT For All Courses</p>
                     <ul>
-                        <li>IIT Mandi - Minor in CSE & Adv. Technologies</li>
+                        <li>IIT Mandi - Minor in CSE &amp; Adv. Technologies</li>
                         <li>IIT Mandi - Minor in Business Analytics</li>
                         <li>IIT Mandi - Minor in Embedded Systems</li>
                         <li>IIT Ropar- Minor in AI</li>
-                        <li>IIT Guwahati - Minor in Data Science & ML</li>
-                        <li>IIT Mandi - Minor in Artificial Intelligence & Data Science</li>
-                        <li>IIM Mumbai - Digital Marketing & Analytics</li>
+                        <li>IIT Guwahati - Minor in Data Science &amp; ML</li>
+                        <li>IIT Mandi - Minor in Artificial Intelligence &amp; Data Science</li>
+                        <li>IIM Mumbai - Digital Marketing &amp; Analytics</li>
                         <li>IIM Sirmaur - Digital Marketing</li>
                         <li>IIT Patna - Product Management and Agentic AI</li>
                         <li>IIT Patna - Foundation for Data Science and Machine Learning</li>
@@ -311,7 +311,7 @@
         <div class="footer-end">
             <div class="footerend">
                 <p class="footerend_1">Copyright © Nolan Edutech Private Limited.All right Reserved</p>
-                <p class="footerend_2"><u>Privacy Policy</u> & <u>Terms and Co</u></p>
+                <p class="footerend_2"><u>Privacy Policy</u> &amp; <u>Terms and Co</u></p>
             </div>
             <p class="footerend_4">Address :- Masai, IncubexHSR21, No 1178, 5th Main Road, Sector 7, HSR Layout, Bengaluru, Karnataka 560102 </p>
         </div>
