--- a/Masai Website Practice/HTML/Success_Stories.html
+++ b/Masai Website Practice/HTML/Success_Stories.html
@@ -63,7 +63,7 @@
     <div class="gray_color">
         <div class="stories_book">
             <div class="book_child1">
-                <h1 class="blue_text">Transformations & Triumphs: Our Impact Book</h1>
+                <h1 class="blue_text">Transformations &amp; Triumphs: Our Impact Book</h1>
                 <p class="black_text">A collection of 101 Alumni Success Stories</p>
                 <button class="book_button">Download Book</button>
             </div>
@@ -516,7 +516,7 @@
                             </div>
                             <div class="launch_list1">
                                 <img src="../utils/CheckBox.svg" alt="CheckBox" class="checkbox">
-                                <p>Opportunities : Full Stack Developer, Backend Developer,<br> Software Engineer & much more.</p>
+                                <p>Opportunities : Full Stack Developer, Backend Developer,<br> Software Engineer &amp; much more.</p>
                             </div>
                         </div>
                         <div class="launch_button">
@@ -555,7 +555,7 @@
                             </div>
                             <div class="launch_list1">
                                 <img src="../utils/CheckBox.svg" alt="CheckBox" class="checkbox">
-                                <p>Opportunities : Data Engineer, Data Analyst, Machine Learning<br> Engineer & much more.</p>
+                                <p>Opportunities : Data Engineer, Data Analyst, Machine Learning<br> Engineer &amp; much more.</p>
                             </div>
                         </div>
                         <div class="launch_button">
@@ -633,7 +633,7 @@
                             </div>
                             <div class="launch_list1">
                                 <img src="../utils/CheckBox.svg" alt="CheckBox" class="checkbox">
-                                <p>Opportunities : Business Analyst, Product Analyst & much more.</p>
+                                <p>Opportunities : Business Analyst, Product Analyst &amp; much more.</p>
                             </div>
                         </div>
                         <div class="launch_button">
@@ -664,7 +664,7 @@
             </div>
             <div class="career_card">
                 <img src="../utils/Rishabh.png" alt="Rishabh Image">
-                <p class="bold_gray">Programming & DSA</p>
+                <p class="bold_gray">Programming &amp; DSA</p>
                 <p class="small_text1">Testimonial of<br> Transformation: Rishabh's<br> Journey of Self-Belief and<br> Masai's Influence</p>
                 <p class="career_text">It was Rishabh's manager who introduced him to<br> Masai, a place where he could further enhance<br> his tech skills. They had previously hired softwar...</p>
                 <p class="gray_text">Jun 30, 2023 - 3 min read</p>
@@ -750,7 +750,7 @@
                 <p class="footer_address">Address :- Masai, IncubexHSR21, No 1178, 5th Main Road,<br> Sector 7, HSR Layout, Bengaluru, Karnataka 560102</p>
             </div>
             <div class="footer_c2">
-                <p><u>Privacy Policy</u> & <u>Terms and Conditions</u></p>
+                <p><u>Privacy Policy</u> &amp; <u>Terms and Conditions</u></p>
             </div>
         </div>
     </div>
